# capnoise

./: Cargo.toml  README.md
crates/basic/: Cargo.toml  gen.py
crates/basic/src/: converter.rs  generator.rs  lib.rs  main.rs  resources.rs
crates/server/: Cargo.toml
