[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
authors     = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description = "A captcha based on noise animations, designed to protect website from AI or automation scripts."
edition     = "2024"
homepage    = "https://github.com/Reverier-Xu/capnoise"
repository  = "https://github.com/Reverier-Xu/capnoise"
version     = "0.1.0"

[workspace.dependencies]
