[package]
name = "capnoise"

authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
license.workspace     = true
repository.workspace  = true
version.workspace     = true

publish = true

[dependencies]
once_cell = { workspace = true }
rand      = { workspace = true }

[[bin]]
name = "capnoise"
path = "src/main.rs"
